[package]
name = "yew-counter"
version = "0.1.0"
authors = [ "Hanabusa Masahiro" ]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wee_alloc = "0.4"
wasm-bindgen = "^0.2"
yew = { version = "0.17", features = ["web_sys"] }

[profile.release]
lto = true
opt-level = "z"
# panic = "abort"

